--- a/config.yml
+++ b/config.yml
@@ -2,8 +2,8 @@ baseURL: "https://AndrewWu29.github.io/Andrew_Wu29/"
 title: Andrew's Blog
 paginate: 5
 theme: PaperMod
-defaultContentLanguage: zh-tw
-languageCode: zh-tw
+defaultContentLanguage: en
+# languageCode: zh-tw
 
 enableRobotsTXT: true
 buildDrafts: false
@@ -59,21 +59,22 @@ params:
     iconHeight: 35
 
   # profile-mode
-  profileMode:
-    enabled: True # needs to be explicitly set
-    # title: ExampleSite
-    subtitle: "還在英國苦尋工作的軟體測試工程師"
-    imageUrl: "https://media-exp1.licdn.com/dms/image/D5635AQHOkxkoH2KIWQ/profile-framedphoto-shrink_400_400/0/1636395586487?e=1640703600&v=beta&t=4W2quMuD6ESWRTwqKBmY0LSohFq6cM6UWkNF9I9AyR0"
-    imageWidth: 120
-    imageHeight: 120
+  #profileMode:
+  #  enabled: True # needs to be explicitly set
+  #  title: Andrew Wu
+  #  subtitle: "還在英國苦尋工作的軟體測試工程師"
+  #  imageUrl: "profile_avatar_1.jpg"
+  #  imageWidth: 150
+  #  imageHeight: 150
     #imageTitle: my image
-    buttons:
-      - name: 貼文
-        url: posts
-      - name: 標籤
-        url: tags
-      - name: 分類
-        url: categories
+  #  buttons:
+  #    - name: 貼文
+  #      url: posts
+  #    - name: 標籤
+  #      url: tags
+  #    - name: 分類
+  #      url: categories
+
   socialIcons:
     - name: linkedin
       url: "https://www.linkedin.com/in/bing-ying-wu-3b71b783"
@@ -128,24 +129,106 @@ outputs:
         - HTML
         - RSS
         - JSON # is necessary
-menu:
-  main:
-    - identifier: posts
-      name: 文章
-      url: /posts/
-      weight: 10
-    - identifier: categories
-      name: 分類
-      url: /categories/
-      weight: 20
-    - identifier: tags
-      name: 標籤
-      url: /tags/
-      weight: 30
-    - identifier: search
-      name: 搜尋
-      url: /search/
-      weight: 40
+languages:
+  en:
+    contentDir: content/en
+    languageName: English
+    weight: 1
+    DateFormat: "January 2, 2006"
+    profileMode:
+      enabled: true
+      imageUrl: "profile_avatar.jpg"
+      imageWidth: 180
+      imageHeight: 180
+      title: Andrew Wu
+      subtitle: I'm a QAE, and seeking a job in the UK.
+      buttons:
+        - name: Posts
+          url: posts
+        - name: Tags
+          url: tags
+    menu:
+      main:
+        - identifier: posts
+          name: Posts
+          url: /posts/
+          weight: 1
+        - identifier: categories
+          name: Categories
+          url: /categories/
+          weight: 2
+        - identifier: tags
+          name: Tags
+          url: /tags/
+          weight: 3
+        - identifier: search
+          name: Search
+          url: /search/
+          weight: 4
+        - identifier: about
+          name: About
+          url: /about/
+          weight: 5
+  zh-tw:
+    contentDir: content/zh-tw
+    languageName: 中文
+    weight: 2
+    DateFormat: "2006 January 2"
+    profileMode:
+      enabled: true
+      imageUrl: "../profile_avatar.jpg"
+      imageWidth: 180
+      imageHeight: 180
+      title: Andrew Wu
+      subtitle: 還在英國尋找工作機會的軟體測試工程師
+      buttons:
+        - name: 貼文
+          url: posts
+        - name: 分類
+          url: tags
+    label:
+      text: 安德魯的部落格
+    menu:
+      main:
+        - identifier: posts
+          name: 文章
+          url: posts
+          weight: 1
+        - identifier: categories
+          name: 分類
+          url: categories
+          weight: 2
+        - identifier: tags
+          name: 標籤
+          url: tags
+          weight: 3
+        - identifier: search
+          name: 搜尋
+          url: search
+          weight: 4
+        - identifier: about
+          name: 關於我
+          url: about
+          weight: 5
+
+#menu:
+  #main:
+    #- identifier: posts
+    #  name: 文章
+    #  url: /posts/
+    #  weight: 10
+    #- identifier: categories
+    #  name: 分類
+    #  url: /categories/
+    #  weight: 20
+    #- identifier: tags
+    #  name: 標籤
+    #  url: /tags/
+    #  weight: 30
+    #- identifier: search
+    #  name: 搜尋
+    #  url: /search/
+    #  weight: 40
     #- identifier: example
     #  name: example.org
     #  url: https://example.org
