Add Google Analytics

--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ buildDrafts: false
 buildFuture: false
 buildExpired: false
 
-googleAnalytics: UA-123-45
+googleAnalytics: "G-TVP2NV89QN"
 
 permalinks:
   posts: /:year/:month/:title/
@@ -21,10 +21,10 @@ minify:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  title: ExampleSite
-  description: "ExampleSite description"
-  keywords: [Blog, Portfolio, PaperMod]
-  author: Me
+  title: Andrew's Blog
+  description: Loving to explore this world, sharing my thoughts 
+  keywords: [Blog, Portfolio, PaperMod, Diary]
+  author: Andrew Wu
   # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
@@ -210,29 +210,6 @@ languages:
           name: 關於我
           url: about
           weight: 5
-
-#menu:
-  #main:
-    #- identifier: posts
-    #  name: 文章
-    #  url: /posts/
-    #  weight: 10
-    #- identifier: categories
-    #  name: 分類
-    #  url: /categories/
-    #  weight: 20
-    #- identifier: tags
-    #  name: 標籤
-    #  url: /tags/
-    #  weight: 30
-    #- identifier: search
-    #  name: 搜尋
-    #  url: /search/
-    #  weight: 40
-    #- identifier: example
-    #  name: example.org
-    #  url: https://example.org
-    #  weight: 30
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 # pygmentsUseClasses: true
 # markup:
