--- a/config.yml
+++ b/config.yml
@@ -53,22 +53,26 @@ languages:
           name: Posts
           url: /posts/
           weight: 1
+        - identifier: archives
+          name: Archives
+          url: /archives/
+          weight: 2
         - identifier: categories
           name: Categories
           url: /categories/
-          weight: 2
+          weight: 3
         - identifier: tags
           name: Tags
           url: /tags/
-          weight: 3
+          weight: 4
         - identifier: search
           name: Search
           url: /search/
-          weight: 4
+          weight: 5
         - identifier: about
           name: About
           url: /about/
-          weight: 5
+          weight: 6
   zh-tw:
     languageName: 中文
     languageAltTitle: 中文
@@ -95,22 +99,26 @@ languages:
           name: 文章
           url: /posts/
           weight: 1
+        - identifier: archives
+          name: 歸檔
+          url: /archives/
+          weight: 2
         - identifier: categories
           name: 分類
           url: /categories/
-          weight: 2
+          weight: 3
         - identifier: tags
           name: 標籤
           url: /tags/
-          weight: 3
+          weight: 4
         - identifier: search
           name: 搜尋
           url: /search/
-          weight: 4
+          weight: 5
         - identifier: about
           name: 關於我
           url: /about/
-          weight: 5
+          weight: 6
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
