--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,13 +22,12 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Hugo setup
-      # You may pin to the exact commit or the version.
-      # uses: peaceiris/actions-hugo@2e89aa66d0093e4cd14751b3028fc1a179452c2e
-        uses: peaceiris/actions-hugo@v2.4.13
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Action Hugo
+        # You may pin to the exact commit or the version.
+        # uses: kevvurs/action-hugo@23ea7d07ea54e66257252f150e06622c47bc24ed
+        uses: kevvurs/action-hugo@v1.0-rc2
       - name: Cypress.io
         uses: cypress-io/github-action@v2.9.7
         with:
