--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,15 +23,19 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: npm install
-        run: npm install
-      - name: Get Hugo
-        run: wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.47.1/hugo_0.47.1_Linux-64bit.deb
-      - name: Install Hugo
-        run: sudo dpkg -i /tmp/hugo.deb
-      - name: Link Hugo
-        run: sudo ln /usr/local/bin/hugo /usr/local/bin/hugo-0.47.1
+      - uses: actions/checkout@v3
+        with:
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.91.2'
+          # extended: true
+
+      - name: Build
+        run: hugo --minify
       - name: Cypress.io
         uses: cypress-io/github-action@v2.9.7
         with:
