--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,8 +31,8 @@ jobs:
         with:
           hugo-version: '0.91.2'
           # extended: true
-      - name: Build
-        run: hugo --minify
+      #- name: Build
+        #run: hugo --minif
       - name: Cypress.io
         uses: cypress-io/github-action@v2.9.7
         with:
