added purge cloudflare cache to gh-pages.yml

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -40,3 +40,12 @@ jobs:
           github_token: ${{ secrets.HUGO_DEPLOY_TOKEN }}
           publish_dir: ./public
           commit_message: ${{ github.event.head_commit.message }}
+      
+      - name: Purge Cloudflare Cache
+        env:
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.HUGO_DEPLOY_TOKEN }}
+        run: |
+          chmod +x ./purge_cloudflare_cache.sh
+          ./purge_cloudflare_cache.sh
